# segment

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  convolve.hpp  filter.hpp  imconv.hpp  imutil.hpp  pnmfile.hpp  segment-1.0.pc.in  segment-graph.hpp  segment-image.hpp  segment.cpp  segment.hpp
